# opengl-rust-water

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
gl_img/: Cargo.toml
gl_img/src/: lib.rs
gl_obj/: Cargo.toml
gl_obj/src/: buffer.rs  lib.rs  program.rs  shader.rs  texture.rs  vertexarray.rs
gl_safe/: Cargo.toml
gl_safe/src/: dsa_shader.rs  dsa_vertexarray.rs  lib.rs
gl_vec/: Cargo.toml
gl_vec/src/: ivec.rs  lib.rs  uvec.rs  vec.rs
gl_win/: Cargo.toml
gl_win/src/: lib.rs
safe_gl/: Cargo.toml
safe_gl/src/: check.rs  dsa_program.rs  dsa_texture.rs  dsa_wrappers.rs  safewrappers.rs
vec_types/: Cargo.toml
vec_types/src/: float.rs  lib.rs  vec2.rs  vec3.rs
water/: Cargo.toml
water/src/: accel.glsl  apply_mouse.glsl  height.frag  main.rs  normal.glsl  photon.glsl  spatial_filter.glsl  texture.vert  udecay.glsl  verlet.glsl  water.frag
